Fixing some minor layout problems
Also removed copy sidebar css file

--- a/personal-site/src/App.css
+++ b/personal-site/src/App.css
@@ -1,14 +1,9 @@
-html, body {
-  overflow: hidden;
-}
-
 .App {
   width: 100%;
   height: 100%;
   display: flex;
   flex-direction: row;
-  flex-wrap: nowrap;
-  overflow: hidden;
+  
 }
 
 .App-logo {
@@ -40,12 +35,3 @@ html, body {
   }
 }
 
-.sub-content {
-  display: flex;
-  order: 4;
-  background: green;
-  flex-direction: column;
-  position: absolute;
-  left: 20%;
-  overflow: auto;
-}
