--- a/personal-site/src/styles/sidebar.module.css
+++ b/personal-site/src/styles/sidebar.module.css
@@ -1,19 +1,18 @@
 .sidebarContainer {
   display: flex;
   min-height: 100vh;
-  width: 20%;
+  width: 30%;
   flex-direction: column;
   flex-wrap: wrap;
   align-items: flex-start;
   background-color: #add8e6;
-  box-shadow: 2px 6px;
-  position: fixed;
-  overflow: hidden;
+  box-shadow: 8px 10px;
+  order: -1;
 }
 
 .sidebarItem {
 	font-family: Arial;
-	font-size: 5em;
+	font-size: 4em;
 	color: red;
 	font-style: italic;
 	align-content: center;
